--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "sass": "^1.45.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
