--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "react-youtube": "^7.13.1",
     "sass": "^1.45.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
